truncation corrected

--- a/style.css
+++ b/style.css
@@ -3,16 +3,6 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-body {
-  height: 100%;
-}
-main {
-  height: 100%;
-}
-html {
-  height: 100%;
 }
 .leftimg {
   width: 30px;
@@ -38,6 +28,7 @@ html {
 .rightimg {
   width: 400px;
   height: 500px;
+  padding: 5px;
   object-fit: cover;
 }
 .innerDiv:focus {
